--- a/src/NavComponents/Navbar.css
+++ b/src/NavComponents/Navbar.css
@@ -1,5 +1,6 @@
 .navBackgroundColor {
     box-shadow: 2px 2px 8px rgb(148, 148, 148);
+    background-color: aliceblue;
 }
 .navSigninButtonStyle {
     border: 1px solid #8e7c6c;
